Button visibility fix
Buttons was not displayed displayed properly.
Fix consists of changing of file names in CSS

--- a/css/styles.css
+++ b/css/styles.css
@@ -102,7 +102,7 @@ html, body{
 	width:224.26px;
 	height:49.33px;
 	background-repeat:no-repeat;
-	background-image:url(../img/B1_s.png);
+	background-image:url(../img/B1_S.png);
 }
 
 #identify:hover {
@@ -128,7 +128,7 @@ html, body{
 	width:224.26px;
 	height:49.33px;
 	background-repeat:no-repeat;
-	background-image:url(../img/B2_s.png);
+	background-image:url(../img/B2_S.png);
 }
 
 #order:hover {
@@ -153,7 +153,7 @@ html, body{
 	width:224.26px;
 	height:49.33px;
 	background-repeat:no-repeat;
-	background-image:url(../img/B3_s.png);
+	background-image:url(../img/B3_S.png);
 }
 
 #profile:hover {
